--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,19 @@
-/* Add CSS Styling */
+.odd {
+   background-color: rgb(237, 50, 118);
+   font-family: Verdana, "DejaVu sans", sans-serif; 
+} 
+
+#second {
+    color: blue;
+    font-size: 36px;
+}
+
+.large {
+    font-size: 24px;
+}
+
+#fourth {
+    background-color: rgb(128, 219, 92);
+    font-size: 24px;
+    font-weight: bold;
+}
