--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,14 @@
-/* Add CSS Styling */
+.button_one,
+.button_two{
+  font-size: 28px;
+  font-family: Helvetica, "Times New Roman", sans-serif;
+}
+
+.button_one{
+    background-color: #000000;
+    color: white;
+}
+
+.button_two{
+    background-color: #ffdd00;
+}
